Fixed toolbar being squished on low window height

--- a/src/main/resources/net/marvk/fs/vatsim/map/view/root.css
+++ b/src/main/resources/net/marvk/fs/vatsim/map/view/root.css
@@ -65,6 +65,8 @@
 .icon-button {
     -fx-background-insets: none;
     -fx-background-color: transparent;
+    -fx-min-width: -vatsim-toolbar-button-size;
+    -fx-min-height: -vatsim-toolbar-button-size;
     -fx-pref-width: -vatsim-toolbar-button-size;
     -fx-pref-height: -vatsim-toolbar-button-size;
     -fx-padding: 0;
